--- a/app/index.html
+++ b/app/index.html
@@ -12,9 +12,8 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/discover.css">
+    <link rel="stylesheet" href="styles/search.css">
     <!-- endbuild -->
   </head>
   <body class="block--dark layout" ng-app="blloonSearchApp">
