--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/services/book.js"></script>
+        <script src="scripts/directives/background-image.js"></script>
         <!-- endbuild -->
 </body>
 </html>
