--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,10 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
+    <link rel="stylesheet" href="styles/blloon.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/search.css">
+    <link rel="stylesheet" href="styles/book.css">
     <!-- endbuild -->
   </head>
   <body class="block--dark layout" ng-app="blloonSearchApp">
@@ -37,7 +39,7 @@
     <div class="wrapper">
       <div class="wrapper__row wrapper__row--header">
         <header class="header header--dark-background header--trans" role="banner">
-          <a class="logo" href="/">
+          <a class="logo header__logo--light" href="/">
             <img alt="Blloon" src="/images/logo.svg">
           </a>
         </header>
@@ -46,7 +48,7 @@
 
       <div class='wrapper__row wrapper__row--body'>
         <div class='wrapper__cell'>
-          <div class='main' role='main' ng-view=""></div>
+          <div class='main' role='main' ui-view="main"></div>
         </div>
       </div>
     </div>
@@ -70,6 +72,10 @@
     <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
     <script src="bower_components/ng-debounce/angular-debounce.js"></script>
     <script src="bower_components/ng-lodash/build/ng-lodash.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ui-router-extras/release/ct-ui-router-extras.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-truncate/src/truncate.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -81,6 +87,7 @@
         <script src="scripts/filters/to_puzzle.js"></script>
         <script src="scripts/services/blloon_config.js"></script>
         <script src="scripts/directives/books_block.js"></script>
+        <script src="scripts/controllers/book.js"></script>
         <!-- endbuild -->
 </body>
 </html>
