--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
         <script src="scripts/services/blloon_config.js"></script>
         <script src="scripts/directives/books_block.js"></script>
         <script src="scripts/controllers/book.js"></script>
+        <script src="scripts/directives/scroll_to.js"></script>
         <!-- endbuild -->
 </body>
 </html>
